# Copyright 2022 Bernardo Eilert Trevisan. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

executable("vulkan_glfw") {
  output_name = "embedder_drm_example_vulkan"

  sources = [ "FlutterEmbedder.cc" ]

  configs += [ "//flutter/vulkan:vulkan_config" ]

  deps = [
    "//flutter/shell/platform/embedder:embedder",
    "//third_party/glfw",
    "//third_party/vulkan-deps/vulkan-headers/src:vulkan_headers",
  ]
}
